--- a/frontend/smart-map/package.json
+++ b/frontend/smart-map/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
     "use-places-autocomplete": "^1.11.0",
     "web-vitals": "^2.1.4"
