--- a/frontend/smart-map/package.json
+++ b/frontend/smart-map/package.json
@@ -10,10 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "swr": "^1.2.2",
     "use-places-autocomplete": "^1.11.0",
+    "use-supercluster": "^0.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
