--- a/frontend/vue-smartmap/package.json
+++ b/frontend/vue-smartmap/package.json
@@ -7,12 +7,14 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.13.7",
+    "bootstrap": "^5.1.3",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
-    "vite": "^2.8.4"
+    "vite": "^2.8.6"
   }
 }
